spade-tests/src/snapshots/spade_tests__ast_lowering__builtin_pipeline_methods_produce_error.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Pipelines are currently not allowed in impl blocks
  ┌─ testinput:5:5
  │
5 │     pipeline(1) x(self, x: bool) -> bool __builtin__ 
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed here
  │
  = note: This limitation is likely to be lifted in the future
  = help: Consider defining a free-standing pipeline for now


